--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ nav a:hover {
 
 /* --- Hero Section --- */
 .hero {
-    background: url('images/hero-bg.jpg') no-repeat center center/cover;
+    background: url('images/hero.jpg') no-repeat center center/cover;
     height: 400px;
     display: flex;
     flex-direction: column;
