--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@ body {
 
 /* Hero */
 .hero {
-    background: url('../images/hero.jpg') no-repeat center center/cover;
+    background: url('images/hero.jpg') no-repeat center center/cover;
     height: 400px;
     display: flex;
     flex-direction: column;
