--- a/public/header.css
+++ b/public/header.css
@@ -28,7 +28,11 @@ header {
     color: white;
 }
 
-
+.site-name a {
+  text-decoration: none;
+  color: white;
+  font-family: 'Inter', sans-serif;
+}
 
 
 /* Navigation Links */
