--- a/public/header.css
+++ b/public/header.css
@@ -13,13 +13,13 @@ header {
 
 /* Top Bar Container */
 .top-bar.container {
-  display: flex;
-  justify-content: space-between; /* الشعار على اليسار، باقي العناصر على اليمين */
-  flex-direction: row; /* مهم جداً */
-  align-items: center;
-  gap: 20px;
-  flex-wrap: wrap;
+    display: flex;
+    flex-direction: row; /* مهم جداً */
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
 }
+
 
 /* Site Name */
 .site-name {
