--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,3 +1,4 @@
+<style>
 footer {
   background-color: #0f1f4d;
   color: #ffffff;
@@ -101,3 +102,4 @@ footer {
     justify-content: center;
   }
 }
+</style>
